<resources>
    <string name="app_name">BLEapp</string>
    <string name="connect">CONNECT</string>
    <string name="disconnect">DISCONNECT</string>
    <string name="menu_scan">scan</string>
    <string name="menu_stop">stop</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth is not supported.</string>
    <string name="device_address">Address:</string>
    <string name="state">Status:</string>
    <string name="none_state">Disconnect</string>
    <string name="data">Device Name:</string>
    <string name="no_data">No Device</string>

    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>

    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="sp02">SP02</string>
    <string name="heart_rate">HEART RATE</string>
    <string name="raw_data">RAW DATA</string>
    <string name="display_data">DISPLAY DATA</string>
    <string name="no_address">No Address</string>
    <string name="spo2_fragment">SPO2 :</string>
    <string name="current_spo2">Current SpO2</string>
    <string name="bpm">BPM:</string>
    <string name="current_bpm">Current bpm</string>
    <string name="device_uuid">Device UUID:</string>
    <string name="send_data">SEND DATA</string>
    <string name="list_wifi">LIST WIFI</string>
    <string name="list_ble_device">LIST BLE DEVICE</string>
    <string name="wifi_name">Wifi Name</string>
    <string name="password">Password:</string>
    <string name="enter_password">Enter Password</string>
    <string name="reload">Reload</string>
    <string name="emit_to_server">Emit to server</string>
    <string name="disable_emit">Disable emit</string>
    <string name="device_config">DEVICE CONFIG</string>
    <string name="_0">0000</string>
    <string name="level">Level:</string>
    <string name="channel_wifi">channel:</string>
    <string name="encryption">encryption:</string>
</resources>
