<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginWifiActivity"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="8dp">
        <TextView
            android:text="@string/wifi_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_wifi_name"
            android:textStyle="bold"
            android:textSize="25sp"
            android:gravity="center"
            android:text="@string/wifi_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:inputType="textPassword"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/enter_password"
                android:id="@+id/edt_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <CheckBox
                android:id="@+id/cb_show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent"
        android:layout_gravity="center"
        android:text="@string/connect"
        android:id="@+id/btn_connect_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <Button
        android:background="@color/colorAccent"
        android:layout_gravity="center"
        android:text="@string/display_data"
        android:id="@+id/btn_display_data_wifi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>